Fixed the subtitle to be more visibal in Chroma

--- a/StreamWorks/StreamWorks/wwwroot/app.css
+++ b/StreamWorks/StreamWorks/wwwroot/app.css
@@ -133,7 +133,7 @@ h1:focus {
 .main-timer-label {
     width: 100%;
     font-size: 1rem;
-    font-weight: 300;
+    font-weight: 500;
     color: #FFF;
     padding: 0 0 0 1rem;
     margin: 0 0 0 0;
@@ -148,7 +148,7 @@ h1:focus {
 
 .timer-sub-label {
     font-size: 1rem;
-    font-weight: 300;
+    font-weight: 500;
     color: #777;
     padding: 0 1rem 0 1rem;
 }
